[gd_scene load_steps=10 format=3 uid="uid://cu27k0v4nhjek"]

[ext_resource type="Script" path="res://resource/organs/continuous_organ/color_organ.gd" id="1_tn22s"]
[ext_resource type="Texture2D" uid="uid://dir4xaqhgm1ng" path="res://assets/tile/陷阱.png" id="2_2ufpd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yfi5e"]
atlas = ExtResource("2_2ufpd")
region = Rect2(0, 0, 48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1a5c"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abusp"]
size = Vector2(144, 48)

[sub_resource type="Gradient" id="Gradient_u447a"]
offsets = PackedFloat32Array(0.333333, 0.719101)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a43kt"]
gradient = SubResource("Gradient_u447a")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5pxd"]
bg_color = Color(0, 0, 0, 0.301961)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_wmkvb"]
font_size = 24

[node name="ColorOrgan" type="CharacterBody2D"]
collision_layer = 48
script = ExtResource("1_tn22s")
organ_name = "颜色方块"
organ_desc = "当玩家在冲刺状态进入颜色方块可以直接穿过"
organ_texture = SubResource("AtlasTexture_yfi5e")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2ufpd")
region_enabled = true
region_rect = Rect2(0, 0, 48, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b1a5c")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_abusp")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_a43kt")
texture_scale = 1.5

[node name="FTipPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 64)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -130.0
offset_right = 100.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_q5pxd")

[node name="Label" type="Label" parent="FTipPanelContainer"]
layout_mode = 2
text = "后退冲刺可以穿过这个方块"
label_settings = SubResource("LabelSettings_wmkvb")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
